manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: jayaks1
spec:
  selector:
      matchLabels:
        app: jayaks1
  replicas: 3
  template:
      metadata:
        labels:
            app: jayaks1
      spec:
        containers:
        - name: jayaks1
          image: "jayacr001.azurecr.io/jayaks1"
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
