manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jayaks2
spec:
  selector:
      matchLabels:
        app: jayacr002
  replicas: 3
  template:
      metadata:
        labels:
            app: jayaks2
      spec:
        containers:
        - name: jayacr002
          image: "jayacr002.azurecr.io/jayaks2:v1"
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
