manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: jayaks1-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: jayaks1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
