manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "jayaksdemo-4ca2"
    labels:
        app: "jayaksdemo-4ca2"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "jayaksdemo-4ca2"
